# simply_budget_it

./: .env  .gitignore  Makefile  README.md  budget_data.xlsx  docker-compose.yaml  main.py
backend/: Cargo.toml
backend/migrations/2024-05-24-022952_budget_database/: down.sql
backend/src/: config.rs  main.rs
backend/src/domain/: budgets.rs  mod.rs  transactions.rs  users.rs
frontend/: bun.lockb  frontend.dockerfile  package-lock.json  package.json
simple_budget/: data_manager.py  gui.py  main.py
simply_budget_it/: Cargo.toml  package.json  pnpm-lock.yaml
simply_budget_it/src/: App.tsx  Interfaces.ts  data_manager.rs  gui.rs  main.rs
simply_budget_it/src-tauri/: Cargo.toml  tauri.conf.json
simply_budget_it/src-tauri/migrations/: 20240226051155_create_transactions_table.sql
simply_budget_it/src-tauri/src/: data_management.rs  main.rs
simply_budget_it/src/components/: ActionButton.tsx  Header.tsx  SummarySection.tsx  TableView.tsx
simply_budget_it_new/: .dockerignore  compose.yaml  compose.yml  docker-compose.yaml
simply_budget_it_new/backend/: Cargo.toml  backend.dockerfile  rust.dockerfile
simply_budget_it_new/backend/migrations/2024-05-24-022952_budget_database/: up.sql
simply_budget_it_new/backend/src/: config.rs  errors.rs  main.rs  models.rs  router.rs  schema.rs
simply_budget_it_new/backend/src/domain/: budgets.rs  mod.rs  routehandlers.rs  transactions.rs  users.rs
simply_budget_it_new/frontend/: next.dockerfile
