[package]
name = "backend"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
diesel_migrations = { version = "2", features = ["postgres"] }
axum = { version = "0.6", features = ["macros"] }
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0.68"
tokio = { version = "1.0", features = ["full"] }
tower-http = { version = "0.3.4", features = ["cors"] }
chrono = "0.4.38"
diesel = { version = "2.1.6", features = ["r2d2", "bigdecimal", "chrono", "postgres", "num-bigint", "num-integer", "num-traits"] }
bigdecimal = "0.4.3"
deadpool-diesel = { version = "0.6.1", features = ["postgres"] }
axum-macros = "0.4.1"
tracing-subscriber = { version = "0.3.18", features = ["env-filter"] }
tracing = "0.1.40"
dotenvy = "0.15.7"
